# Makedown_My

./: CMakeLists.txt  README.md  editormanager.cpp  editormanager.h  img.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preview_css.qrc  theme.qrc  thememanager.cpp  thememanager.h
resource/: dark.css  dark.qss  fresh.css  fresh.qss  light.css  light.qss  pink.css  pink.qss
